--- a/suretriggers/changelog.txt
+++ b/suretriggers/changelog.txt
@@ -1,3 +1,19 @@
+Version 1.0.68 - Thursday, 19th December 2024
+- Improvement: "WordPress" - Added fix for twice running "Post Created / Updated" Trigger
+- Improvement: "SureFeedback" - Added improvements for response in Triggers
+- Improvement: "bbPress" - Added improvement to map forum ID in "Subscribe User in Forum" Action
+- Improvement: "LatePoint" - Added improvements to "Create Booking" and "Update Booking" Actions
+
+Version 1.0.67 - Wednesday, 11th December 2024
+- New: Added "FluentSMTP" Integration
+- Improvement: "Presto Player" - Added improvements for creating posts with Presto Video URL in the "Create Media Hub" Action
+- Improvement: "WooCommerce Bookings" - Added fix for response in "Booking Created" Trigger
+- Improvement: "FluentCRM" - Added improvements in error status in Actions
+- Improvement: "ConvertPro" - Added improvements in response data in "Form Submitted" Trigger
+
+Version 1.0.66 - Friday, 15th November 2024
+- Improvement: "WordPress" - Added fix for featured image response data in  WordPress Triggers
+
 Version 1.0.65 - Wednesday, 13th November 2024
 - New: Added "ProfileGrid" Integration
 - Improvement: "WordPress" - Added improvements for featured image data in "Post Created" Trigger
