--- a/suretriggers/changelog.txt
+++ b/suretriggers/changelog.txt
@@ -1,3 +1,14 @@
+Version 1.0.73 - Monday, 24th February 2025
+- Improvement: "Fluent Support" - Added new "Block User" Action
+- Improvement: "Easy Digital Downloads" - Added improvement for "User has purchased a download" Action
+- Improvement: "WordPress" - Added improvement for "Create / Update User" Action using username
+- Improvement: "WooCommerce" - Added improvement for "Product Purchased" Trigger
+
+Version 1.0.72 - Monday, 17th February 2025
+- New: Added "SureMail" Integration
+- Improvement: "Easy Digital Downloads" - Added new "Create Discount" Action
+- Improvement: "WP Courseware" - Added improvement in "Remove user from course" Action
+
 Version 1.0.71 - Tuesday, 4th February 2025
 - New: Added the submenu with a "Status" tab for viewing registered events and an "Outgoing Requests" tab for tracking plugin initiated request
 - Improvement: "WordPress" - Added custom taxonomy support in "Create Category" Action
