--- a/suretriggers/changelog.txt
+++ b/suretriggers/changelog.txt
@@ -1,3 +1,19 @@
+Version 1.0.87 - Friday, 16th May 2025
+- Improvement: "Paid Memberships Pro" - Added new "List Members" Action
+
+Version 1.0.86 - Monday, 12th May 2025
+- Improvement: "Fluent Support" - Added "Add Tag to Ticket", "Reply to Ticket as Agent", and "Get All Tickets" Actions
+- Improvement: "Spectra" - Added improvements for form listing in "Form Submitted" Trigger
+- Fix: "Bricks Builder" - Enhanced the label for the form select dropdown and resolved submission issue in "Form Submitted" Trigger
+- Fix: "BuddyBoss" - Resolved issue for notifications in "Send Notification to Group Members" Action
+- Fix: "BuddyPress" - Resolved issue for notifications in "Send Notification to All Group Members" and "Send User Notification" Actions
+- Fix: "WooCommerce" - Prevented duplicate trigger execution in "Order Paid" Trigger
+- Fix: "WordPress" - Ensured proper trigger execution for custom post types in "Post Created / Updated" Trigger
+
+Version 1.0.85 - Wednesday, 30th April 2025
+- Improvement: "EDD" - Added new "Create Discount (Free)" and "Delete Discount" Actions, and a new "Order Status Changes" Trigger
+- Improvement: "WooCommerce" - Added new "Delete Coupon" Action
+
 Version 1.0.84 - Monday, 28th April 2025
 - Improvement: "BuddyBoss" – Added fix for the "Subscribe User to Forum" Action and introduced a new "Get Forum Subscribers" Action
 - Improvement: "FluentCRM" - Added new "Add Event" Action
@@ -7,7 +23,7 @@ Version 1.0.84 - Monday, 28th April 2025
 - Fix: Resolved early translation loading notice
 
 Version 1.0.83 - Monday, 21st April 2025
-- Important fixes
+- Fix: This update addressed a security bug. Props to Denver Jackson and Patchstack for privately reporting it to our team. Please make sure you are using the latest version on your website.
 
 Version 1.0.82 - Tuesday, 15th April 2025
 - Improvement: Make WordPress 6.8 compatible
